# football

./: main.py  pdf_explore.ipynb  plays.csv  pyproject.toml
pages/: 2_Personnel_Explorer.py
