[project]
name = "football"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "streamlit>=1.48.1",
]
